# codility

./: .gitignore  Brackets.cpp  CMakeLists.txt  Dominator.cpp  EquiLeader.cpp  Fish.cpp  MaxDoubleSliceSum.cpp  MaxProfit.cpp  MaxSliceSum.cpp  Nesting.cpp  NumberOfDiscIntersections.cpp  StoneWall.cpp  main.cpp
